fix header on mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -58,7 +58,7 @@
 		a{
 			justify-content: space-between;
 		}
-		.white-line-mobile{
+		.white-line{
 			width: 100%;
 			border-bottom: 5px solid #fff;
 		}
